# IndirectIlluminationLPAL

./: .gitignore  CMakeLists.txt  README.md
cmake/: Macros.cmake
data/: config.txt
src/: CMakeLists.txt  main.cpp
src/core/: camera.h  common.h  config.h  direct_volume.cpp  direct_volume.h  indirect_surface.cpp  indirect_surface.h  ltc.inc  ltc_texture.cpp  ltc_texture.h  point_light.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  texture_buffer.cpp  texture_buffer.h  timer.cpp  timer.h  vertex_array_object.cpp  vertex_array_object.h  volume_data.cpp  volume_data.h  volume_texture.cpp  volume_texture.h
src/ext/: stb_image_write.h
src/glad/: glad.c  glad.h
src/shaders/: calcRadiance.comp  direct_volume.frag  direct_volume.vert  gaussianFilter.comp  indirect_LPAL.frag  indirect_LPAL.vert  mipmap.comp
